[gd_scene load_steps=6 format=3 uid="uid://clu6wgi3t7kqf"]

[ext_resource type="Texture2D" uid="uid://cwa8fjv57k3yn" path="res://Backgrounds/tile_0018.png" id="1_jhn7r"]
[ext_resource type="Script" path="res://Scripts/Menus/win.gd" id="1_sccaf"]
[ext_resource type="AudioStream" uid="uid://cnb7d3m56qm80" path="res://Audio/win_sound.mp3" id="3_ipdly"]

[sub_resource type="SystemFont" id="SystemFont_lqynj"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_am0d7"]
font_names = PackedStringArray("Impact")

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sccaf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jhn7r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="win_title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.657626, 0.592777, 0.536234, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_lqynj")
theme_override_font_sizes/font_size = 64
text = "YOU WON!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Separator1" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="menu_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_am0d7")
theme_override_font_sizes/font_size = 20
text = "TO MENU
"

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="again_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_am0d7")
theme_override_font_sizes/font_size = 20
text = "PLAY AGAIN"

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_am0d7")
theme_override_font_sizes/font_size = 20
text = "EXIT GAME"

[node name="win_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ipdly")
